# tekstkvalitet

./: .gitignore  README.md  infer.py  model.py  pyproject.toml
scripts/: filter_data.py  label_data.py  train.py  view_samples.py
tekstkvalitet/: __init__.py
