[project]
name = "tekstkvalitet"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "transformers>=4.43.3",
    "datasets>=2.20.0",
    "torch>=2.4.0",
    "numpy>=2.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tekstkvalitet"]

[tool.pyright]
venvPath = "."
venv = ".venv"
